Fix horizontal scroll on mobile screens

--- a/assets/oag.css
+++ b/assets/oag.css
@@ -69,7 +69,7 @@
 				min-height: 330px;
 				background-color: white;
 				li {
-					width: 100%;
+					
 					&:first-child {
 						/* Margin for first child */
 						margin-bottom: 0.5em;
